--- a/style.css
+++ b/style.css
@@ -1,29 +1,37 @@
 header{
-    background-color: bisque;
+    background-color: #131313;
 }
 h1{
     text-align: center;
 }
 body{
     font-family: sans-serif;
-}
-a{
-    background-color: honeydew;
-    border: solid 2px gray;
-    color: black;
+    background: linear-gradient(45deg, #ff0000, #ff7300, #fffb00, #48ff00, #00ffd5, #002bff, #7a00ff, #ff00c8, #ff0000);
+    color: white;
 }
 header{
     text-align: center;
 }
 main{
-    background-color: bisque;
+    background-color: #131313;
 }
 h3{
-    background-color: gold;
+    border: 2px solid red;
+
 }
 h2{
     text-align: center;
 }
 footer{
-    background-color: bisque;
+    background-color: #131313;
+}
+a{
+    background: linear-gradient(45deg, #ff0000, #22B01B, #00ffd5, #002bff, #7a00ff, #ff00c8, #ff0000);
+    color: white;
+}
+footer img{
+    border-radius: 50%;
+}
+header img{
+    border-radius: 9%;
 }
